--- a/templates/success.html
+++ b/templates/success.html
@@ -16,10 +16,11 @@
             <button class="submit">View Users</button>
         </a>
 
-        <a href="{{ url_for('home') }}">
+        <a href="{{ url_for('index') }}">
             <button class="submit">Back to Register</button>
         </a>
     </div>
 </div>
 </body>
+
 </html>
