--- a/templates/users.html
+++ b/templates/users.html
@@ -13,22 +13,25 @@
 
         <table style="width:100%; color:white; margin-top:20px;">
             <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Created</th>
+                <th>Username</th>
+                <th>Gender</th>
+                <th>Birthday</th>
+                <th>Phone</th>
+                <th>Address</th>
             </tr>
 
             {% for user in users %}
             <tr>
-                <td>{{ user.first_name }}</td>
-                <td>{{ user.last_name }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.created_at.strftime('%Y-%m-%d') }}</td>
+                <td>{{ user.username }}</td>
+                <td>{{ user.gender or 'N/A' }}</td>
+                <td>{{ user.birthday or 'N/A' }}</td>
+                <td>{{ user.phone or 'N/A' }}</td>
+                <td>{{ user.address or 'N/A' }}</td>
             </tr>
             {% endfor %}
         </table>
-        <a href="{{ url_for('home') }}">
+
+        <a href="{{ url_for('index') }}">
             <button class="submit">Back to Register</button>
         </a>
     </div>
